# WebChat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env_example  main.py  pyproject.toml  settings.py
agent/: agent_role.md  main_agent.py
db/: db_models.py  db_repository.py  db_setup.py  db_singleton.py
logger/: logger.py
routers/: services.py
routers/chat_router/: router.py
routers/main_page_router/: router.py
routers/user_router/: router.py  services.py
templates/: base.html  chat.html  main.html  signin.html  singup.html
